@@ -395,6 +395,7 @@ TESTS_python = \
   python/_autparserr.ipynb \
   python/_aux.ipynb \
   python/acc.py \
+  python/acd.py \
   python/accparse2.py \
   python/alarm.py \
   python/aliases.py \
