@@ -207,6 +207,18 @@ New in spot 2.11.6.dev  (not yet released)
   - spot::minimize_obligation will skip attempts to complement very
     weak automata when those would require too many acceptance sets.
 
+  - acd_transform() was not used by spot::postprocessor unless an
+    option_map was passed.  This was due to some bad default for the
+    "acd" option: it defaulted to true when an option_map was given,
+    and to false otherwise.  This had no consequences on
+    ltl2tgba/autfilt were some option_map is always passed, but for
+    instance the parity automata generated by spot.postprocessor in
+    Python were not using ACD by default.
+
+  - Using spot::postprocessor to produce colored parity automata could
+    fail to color some transiant edges when the "acd" option was
+    activated.
+
 New in spot 2.11.6  (2023-08-01)
 
   Bug fixes:
